Combine the original version by Josh.

--- a/funny_names.tex
+++ b/funny_names.tex
@@ -65,9 +65,9 @@
 
 \begin{document}
 
-\title{Don't forget names pt 2!}
-\author{}
-% V1 by Adrian Chapman 3rd Sep 2012
+\title{Don't forget names}
+\author{Josh Combes, Adrian Chapman and others}
+\affiliation{Center for Quantum Information and Control, University of New Mexico, Albuquerque, NM 87131 USA}
 
 \date{September 3, 2015} % delete this line to display the current date
 \begin{abstract}
@@ -79,7 +79,69 @@
 
 
 \LARGE
+% This part is the original part made by Josh Combes.
+\begin{align}
+A_\ell = \bar{e}\times \bar{a}_n \partial_r e
+\end{align}
 
+\begin{align}
+\hat a\ket{n} = d\ket{y}
+\end{align}
+
+\begin{align}
+B=\bar{e}\times \bar{n}
+\end{align}
+
+\begin{align}
+C = \expt{a|\hat r| l}
+\end{align}
+
+\begin{align}
+C + \det \left(\begin{array}{cc}h & s \\i & r\end{array}\right) = 0
+\end{align}
+
+\begin{align}
+C = \frac{\hbar a} { r}  \op{l}{ i}_e
+\end{align}
+
+\begin{align}
+I(\nu) = a\bar{\eta}
+\end{align}
+
+\begin{align}
+\hat J_o = \hat S \hbar
+\end{align}
+
+\begin{align}
+\frac{L}{e} = i g\hbar
+\end{align}
+
+\begin{align}
+(MA)^\dag = T_IA\Sigma
+\end{align}
+
+\begin{align}
+R\otimes B
+\end{align}
+
+\begin{align}
+\hat S\ket{h} = (a_s\hbar + a_n)\ket{k}
+\end{align}
+
+\begin{align}
+T_y = \ell\hat{e}_r/B_b^o
+\end{align}
+
+\begin{align}
+V_i =c k/y
+\end{align}
+
+\begin{align}
+Z(h) = -a_n g
+\end{align}
+
+% Below is the part made by Adrian Chapman, Ninnat Dangniam and others on Sep 3rd, 2015.
+\newpage
 \begin{align}
 \oint \vec{A} \cdot d \vec{r} &= i \vec{a} \cdot \vec{n}
 \end{align}
